feat: update nginx proxy, unify API prefix, optimize login logo and CORS for production docker

--- a/nginx.conf
+++ b/nginx.conf
@@ -60,11 +60,20 @@ http {
 
         # API代理
         location /api/ {
-            proxy_pass http://101.52.216.178/api/;
+            proxy_pass http://101.52.216.178/;
+            rewrite ^/api/(.*)$ /$1 break;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # CORS 相关
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header Access-Control-Allow-Headers 'Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,If-Modified-Since';
+            add_header X-Debug-Proxy "api-proxy";
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
