feat: 添加 RAGFORGE_ 前缀到所有环境变量
- 修改 nginx.conf 使用 __RAGFORGE_BACKEND_API_URL__ 占位符
- 更新 Dockerfile 和 Dockerfile.dev 的环境变量前缀
- 修改 docker-entrypoint.sh 使用 sed 替换环境变量
- 更新 docker-compose.yml 使用 RAGFORGE_ 前缀
- 添加 env.example 环境变量示例文件
- 添加 test-env.sh 测试脚本
- 确保 web 控制台支持动态环境变量配置

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,13 @@
 # 开发环境Dockerfile
-FROM node:18-alpine
+FROM node:18
 
 # 设置工作目录
 WORKDIR /app
+
+# 设置环境变量默认值
+ENV RAGFORGE_BACKEND_API_URL=http://localhost:9380
+ENV NODE_ENV=development
+ENV PORT=3000
 
 # 复制package文件
 COPY package*.json ./
@@ -14,7 +19,7 @@ RUN npm ci
 COPY . .
 
 # 暴露端口
-EXPOSE 9222
+EXPOSE 3000
 
 # 启动开发服务器
 CMD ["npm", "run", "dev"] 
