--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,13 @@ services:
       dockerfile: Dockerfile
       target: production
     ports:
-      - "3000:3000"
+      - "80:80"
     environment:
       - NODE_ENV=production
+      - RAGFORGE_BACKEND_API_URL=${RAGFORGE_BACKEND_API_URL:-http://ragforge:9380}
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -25,12 +26,14 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     ports:
-      - "9222:9222"
+      - "3000:3000"
     volumes:
       - .:/app
       - /app/node_modules
     environment:
       - NODE_ENV=development
+      - RAGFORGE_BACKEND_API_URL=${RAGFORGE_BACKEND_API_URL:-http://localhost:9380}
+      - PORT=3000
     command: npm run dev
     profiles:
       - dev 
