--- a/nginx.conf
+++ b/nginx.conf
@@ -58,9 +58,9 @@ http {
             try_files $uri =404;
         }
 
-        # API代理
+        # API代理 - 使用环境变量或默认值
         location /api/ {
-            proxy_pass http://101.52.216.178/;
+            proxy_pass __RAGFORGE_BACKEND_API_URL__/;
             rewrite ^/api/(.*)$ /$1 break;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -79,8 +79,9 @@ http {
             proxy_read_timeout 30s;
         }
 
+        # v1 API代理 - 使用环境变量或默认值
         location /v1/ {
-            proxy_pass http://101.52.216.178/v1/;
+            proxy_pass __RAGFORGE_BACKEND_API_URL__/v1/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
